--- a/index.html
+++ b/index.html
@@ -398,32 +398,44 @@
             <h2 id="industries-heading" class="section-title">Industries We Serve</h2>
             <div class="industries-grid">
                 <div class="industry-item">
-                    <i class="fas fa-industry"></i>
+                    <div class="industry-item-image">
+                        <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=600&q=80" alt="Oil and Gas Industry" loading="lazy">
+                    </div>
                     <h4>Oil & Gas</h4>
                     <p>Critical valve automation for upstream, midstream, and downstream operations</p>
                 </div>
                 <div class="industry-item">
-                    <i class="fas fa-tint"></i>
+                    <div class="industry-item-image">
+                        <img src="https://images.unsplash.com/photo-1581093458791-9d42e2c05a8f?w=600&q=80" alt="Water Treatment" loading="lazy">
+                    </div>
                     <h4>Water Treatment</h4>
                     <p>Reliable actuators for water and wastewater treatment facilities</p>
                 </div>
                 <div class="industry-item">
-                    <i class="fas fa-plug"></i>
+                    <div class="industry-item-image">
+                        <img src="https://images.unsplash.com/photo-1473341304170-971dccb5ac1e?w=600&q=80" alt="Power Generation" loading="lazy">
+                    </div>
                     <h4>Power Generation</h4>
                     <p>High-performance solutions for thermal, nuclear, and renewable energy</p>
                 </div>
                 <div class="industry-item">
-                    <i class="fas fa-flask"></i>
+                    <div class="industry-item-image">
+                        <img src="https://images.unsplash.com/photo-1532187863486-abf9dbad1b69?w=600&q=80" alt="Chemical Processing" loading="lazy">
+                    </div>
                     <h4>Chemical Processing</h4>
                     <p>Corrosion-resistant actuators for harsh chemical environments</p>
                 </div>
                 <div class="industry-item">
-                    <i class="fas fa-ship"></i>
+                    <div class="industry-item-image">
+                        <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?w=600&q=80" alt="Marine and Offshore" loading="lazy">
+                    </div>
                     <h4>Marine & Offshore</h4>
                     <p>Rugged solutions designed for marine and offshore applications</p>
                 </div>
                 <div class="industry-item">
-                    <i class="fas fa-building"></i>
+                    <div class="industry-item-image">
+                        <img src="https://images.unsplash.com/photo-1587854692152-cbe660dbde88?w=600&q=80" alt="Pharmaceutical Manufacturing" loading="lazy">
+                    </div>
                     <h4>Pharmaceutical</h4>
                     <p>Precision actuators meeting strict hygiene and quality standards</p>
                 </div>
