--- a/industries-served.html
+++ b/industries-served.html
@@ -209,11 +209,8 @@
     <section class="industries-detail">
         <div class="container">
             <div class="industry-card">
-                <div class="industry-icon">
-                    <picture>
-                        <source srcset="assets/img/industries/oil-gas.webp" type="image/webp">
-                        <img src="assets/img/industries/oil-gas.jpg" alt="Oil & Gas project" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
-                    </picture>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800&q=80" alt="Oil and Gas Industry" loading="lazy">
                 </div>
                 <h2>Oil & Gas</h2>
                 <p>Critical valve automation solutions for upstream exploration, midstream transportation, and downstream refining operations. Our actuators are designed to withstand extreme temperatures, high pressures, and corrosive environments typical in oil and gas applications.</p>
@@ -228,11 +225,8 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon">
-                    <picture>
-                        <source srcset="assets/img/industries/water-treatment.webp" type="image/webp">
-                        <img src="assets/img/industries/water-treatment.jpg" alt="Water treatment plant" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
-                    </picture>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1581093458791-9d42e2c05a8f?w=800&q=80" alt="Water Treatment Facility" loading="lazy">
                 </div>
                 <h2>Water Treatment</h2>
                 <p>Reliable actuators for water and wastewater treatment facilities, ensuring precise control of valves and gates in critical water management processes. Our solutions meet stringent water quality and environmental standards.</p>
@@ -247,11 +241,8 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon">
-                    <picture>
-                        <source srcset="assets/img/industries/power-generation.webp" type="image/webp">
-                        <img src="assets/img/industries/power-generation.jpg" alt="Power plant" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
-                    </picture>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1473341304170-971dccb5ac1e?w=800&q=80" alt="Power Generation Facility" loading="lazy">
                 </div>
                 <h2>Power Generation</h2>
                 <p>High-performance solutions for thermal, nuclear, and renewable energy facilities. Our actuators provide reliable operation in power plants where downtime is not an option.</p>
@@ -266,11 +257,8 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon">
-                    <picture>
-                        <source srcset="assets/img/industries/chemical.webp" type="image/webp">
-                        <img src="assets/img/industries/chemical.png" alt="Chemical processing" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
-                    </picture>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1532187863486-abf9dbad1b69?w=800&q=80" alt="Chemical Processing Plant" loading="lazy">
                 </div>
                 <h2>Chemical Processing</h2>
                 <p>Corrosion-resistant actuators designed for harsh chemical environments. Our products handle aggressive chemicals, high temperatures, and demanding process conditions while maintaining reliability and precision.</p>
@@ -285,11 +273,8 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon">
-                    <picture>
-                        <source srcset="assets/img/industries/marine.webp" type="image/webp">
-                        <img src="assets/img/industries/marine.jpg" alt="Marine and offshore project" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
-                    </picture>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?w=800&q=80" alt="Marine and Offshore Platform" loading="lazy">
                 </div>
                 <h2>Marine & Offshore</h2>
                 <p>Rugged solutions engineered for marine and offshore applications, designed to withstand saltwater exposure, extreme weather conditions, and the demanding requirements of maritime operations.</p>
@@ -304,11 +289,8 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon">
-                    <picture>
-                        <source srcset="assets/img/industries/pharmaceutical.webp" type="image/webp">
-                        <img src="assets/img/industries/pharmaceutical.jpg" alt="Pharmaceutical manufacturing" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
-                    </picture>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1587854692152-cbe660dbde88?w=800&q=80" alt="Pharmaceutical Manufacturing" loading="lazy">
                 </div>
                 <h2>Pharmaceutical</h2>
                 <p>Precision actuators meeting strict hygiene and quality standards required in pharmaceutical manufacturing. Our solutions ensure clean, precise control in sterile environments.</p>
@@ -323,11 +305,8 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon">
-                    <picture>
-                        <source srcset="assets/img/industries/mining.webp" type="image/webp">
-                        <img src="assets/img/industries/mining.jpg" alt="Mining operations" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
-                    </picture>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1625850868424-6d3d61eda462?w=800&q=80" alt="Mining and Minerals Operations" loading="lazy">
                 </div>
                 <h2>Mining & Minerals</h2>
                 <p>Heavy-duty actuators built to handle the extreme conditions of mining operations, including dust, vibration, and heavy loads.</p>
@@ -342,11 +321,8 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon">
-                    <picture>
-                        <source srcset="assets/img/industries/food-beverage.webp" type="image/webp">
-                        <img src="assets/img/industries/food-beverage.png" alt="Food and beverage" class="industry-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
-                    </picture>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?w=800&q=80" alt="Food and Beverage Processing" loading="lazy">
                 </div>
                 <h2>Food & Beverage</h2>
                 <p>Hygienic actuators designed for food and beverage processing, meeting FDA and food safety standards with easy-clean designs.</p>
