--- a/industries.html
+++ b/industries.html
@@ -218,7 +218,9 @@
         <div class="container">
             <h2 id="industries-heading" class="sr-only">Our Industry Solutions</h2>
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-industry"></i></div>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800&q=80" alt="Oil and Gas Industry" loading="lazy">
+                </div>
                 <h2>Oil & Gas</h2>
                 <p>SUSIN is a leading provider of Valve Automation Applications across the upstream, midstream, and downstream sectors in the Asian market. Our exceptional track record is highlighted by approvals from major refineries, showcasing our commitment to quality and reliability. We have over 100 actuators in successful operation within FPSO projects, solidifying our expertise and trustworthiness in critical oil & gas industry applications.</p>
                 <h3>Key Applications:</h3>
@@ -232,7 +234,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-tint"></i></div>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1581093458791-9d42e2c05a8f?w=800&q=80" alt="Water Treatment Plant" loading="lazy">
+                </div>
                 <h2>Water Treatment</h2>
                 <p>Reliable actuators for water and wastewater treatment facilities, ensuring precise control of valves and gates in critical water management processes. Our solutions meet stringent water quality and environmental standards.</p>
                 <h3>Key Applications:</h3>
@@ -246,7 +250,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-plug"></i></div>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1473341304170-971dccb5ac1e?w=800&q=80" alt="Power Generation Plant" loading="lazy">
+                </div>
                 <h2>Power Generation</h2>
                 <p>SUSIN has proudly provided steadfast support to the power industry for over 15 years, earning approvals from esteemed organizations such as BHEL, NTPC, and Kahramaa in Qatar. Currently supporting 100+ power industries across Asia, we deliver reliable valve automation solutions for thermal, nuclear, and renewable energy facilities where operational excellence is critical.</p>
                 <h3>Key Applications:</h3>
@@ -260,7 +266,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-flask"></i></div>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1532187863486-abf9dbad1b69?w=800&q=80" alt="Chemical Processing Plant" loading="lazy">
+                </div>
                 <h2>Chemical Processing</h2>
                 <p>Corrosion-resistant actuators designed for harsh chemical environments. Our products handle aggressive chemicals, high temperatures, and demanding process conditions while maintaining reliability and precision.</p>
                 <h3>Key Applications:</h3>
@@ -274,7 +282,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-ship"></i></div>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?w=800&q=80" alt="Marine and Offshore Platform" loading="lazy">
+                </div>
                 <h2>Marine & Offshore</h2>
                 <p>Rugged solutions engineered for marine and offshore applications, designed to withstand saltwater exposure, extreme weather conditions, and the demanding requirements of maritime operations.</p>
                 <h3>Key Applications:</h3>
@@ -288,7 +298,9 @@
             </div>
 
             <div class="industry-card">
-                <div class="industry-icon"><i class="fas fa-building"></i></div>
+                <div class="industry-image">
+                    <img src="https://images.unsplash.com/photo-1587854692152-cbe660dbde88?w=800&q=80" alt="Pharmaceutical Manufacturing" loading="lazy">
+                </div>
                 <h2>Pharmaceutical</h2>
                 <p>Precision actuators meeting strict hygiene and quality standards required in pharmaceutical manufacturing. Our solutions ensure clean, precise control in sterile environments.</p>
                 <h3>Key Applications:</h3>
