--- a/about-industrial-actuators.html
+++ b/about-industrial-actuators.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Susin Group — Industrial Actuators & Gearboxes</title>
-    <meta name="description" content="About Susin Group — manufacturer of industrial actuators and gearboxes providing motion control solutions worldwide. Learn our history, mission, and certifications.">
-    <meta name="keywords" content="about us, industrial actuators, gearboxes, motion control, manufacturer, company history, mission values">
+    <meta name="description" content="About Susin Group — manufacturer of industrial actuators and gearboxes providing motion control solutions worldwide since 1992. ✓ ISO 9001:2015 Certified ✓ 32+ Years Experience ✓ Global Presence in India, UAE & Qatar">
+    <meta name="keywords" content="about us, industrial actuators, gearboxes, motion control, manufacturer, company history, mission values, ISO 9001 certification, valve automation, actuator supplier, pneumatic actuators, hydraulic actuators">
+    <meta name="author" content="Susin Group">
+    <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+    <meta name="language" content="English">
     <link rel="canonical" href="https://www.susingroup.com/about-industrial-actuators.html" />
     <link rel="icon" href="logo.jpg">
 
