--- a/about.html
+++ b/about.html
@@ -20,9 +20,12 @@
         <meta name="twitter:site" content="@susingroup">
         <meta name="twitter:creator" content="@susingroup">
         <title>About Susin Group | 32+ Years Industrial Actuator Manufacturing Excellence</title>
-        <meta name="description" content="Leading industrial actuator manufacturer since 1992. ✓ ISO 9001 Certified ✓ Global Presence ✓ 32+ Years Experience. Pneumatic, hydraulic & electrical motion control solutions worldwide.">
-        <meta name="keywords" content="about susin group, company history, mission values, industrial actuators manufacturer, gearboxes, certifications, ISO 9001, ATEX, quality excellence, motion control, automation">
+        <meta name="description" content="Leading industrial actuator manufacturer since 1992. ✓ ISO 9001:2015 Certified ✓ Global Presence in India, UAE & Qatar ✓ 32+ Years Experience. Pneumatic, hydraulic & electrical motion control solutions for Oil & Gas, Power, Water Treatment & Chemical industries worldwide.">
+        <meta name="keywords" content="about susin group, company history, mission values, industrial actuators manufacturer, gearboxes, certifications, ISO 9001, ATEX, quality excellence, motion control, automation, valve automation, actuator supplier, motion control manufacturer">
         <meta name="author" content="Susin Group">
+        <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+        <meta name="language" content="English">
+        <meta name="revisit-after" content="7 days">
         <meta name="geo.region" content="IN-TN">
         <link rel="canonical" href="https://www.susingroup.com/about.html" />
         <link rel="icon" href="logo.jpg">
