--- a/careers.html
+++ b/careers.html
@@ -14,9 +14,11 @@
     <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
     <meta name="robots" content="index, follow">
     <title>Careers at Susin Group | 10+ Open Positions in Valve Automation | Coimbatore</title>
-    <meta name="description" content="Join Susin Group's 32-year legacy in valve automation. 10+ open positions: HR, Engineering, Quality, Sales. Global exposure, talent development, competitive benefits. Apply now!">
-    <meta name="keywords" content="susin group careers, valve automation jobs, coimbatore engineering jobs, design engineer jobs, quality inspector jobs, application engineer, HR jobs coimbatore, purchase engineer, automation engineer, talent development, global exposure jobs, manufacturing jobs india">
+    <meta name="description" content="Join Susin Group's 32-year legacy in valve automation. 10+ open positions: HR, Engineering, Quality, Sales, Production. Global exposure in India, UAE & Qatar. Competitive benefits, talent development programs. Apply now! Contact: +91 709 444 5352">
+    <meta name="keywords" content="susin group careers, valve automation jobs, coimbatore engineering jobs, design engineer jobs, quality inspector jobs, application engineer, HR jobs coimbatore, purchase engineer, automation engineer, talent development, global exposure jobs, manufacturing jobs india, mechanical engineer jobs, production jobs, sales engineer jobs, career opportunities">
     <meta name="author" content="Susin Group">
+    <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+    <meta name="language" content="English">
     <meta name="geo.region" content="IN-TN">
     <link rel="canonical" href="https://www.susingroup.com/careers.html">
     <meta property="og:title" content="Career Opportunities at Susin Group | 10+ Open Positions">
