--- a/contact-support-sales.html
+++ b/contact-support-sales.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Susin Group — Sales, Support & Offices</title>
-    <meta name="description" content="Contact Susin Group for product inquiries, quotes, technical support, and global office locations. We're here to help with motion control solutions.">
-    <meta name="keywords" content="sales, support, contact, global locations, technical support, offices, customer service">
+    <meta name="description" content="Contact Susin Group for product inquiries, quotes, technical support, and global office locations. India: +91-77080-97242 | UAE | Qatar. ✓ 24/7 Support ✓ Fast Response ✓ Expert Assistance">
+    <meta name="keywords" content="contact susin group, actuator quotes, product inquiries, technical support, sales contact, global offices, India office, UAE office, Qatar office, motion control support, valve automation contact, customer service, emergency support, coimbatore office, dubai office, doha office">
+    <meta name="author" content="Susin Group">
+    <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+    <meta name="language" content="English">
     <link rel="canonical" href="https://www.susingroup.com/contact-support-sales.html" />
     <link rel="icon" href="logo.jpg">
 
