--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
         <meta name="twitter:site" content="@susingroup">
         <meta name="twitter:creator" content="@susingroup">
         <title>Industrial Actuators & Gearboxes | Advanced Motion Control Solutions | Susin Group</title>
-        <meta name="description" content="Leading manufacturer of industrial actuators, gearboxes & motion control solutions. Pneumatic, electro-hydraulic & electrical actuators for critical automation applications worldwide. ✓ 32+ Years Experience ✓ Global Presence">
-        <meta name="keywords" content="industrial actuators, pneumatic actuators, gearboxes, electro-hydraulic actuators, electrical actuators, motion control, automation, valve actuators, rotary actuators, linear actuators">
+        <meta name="description" content="Leading manufacturer of industrial actuators, gearboxes & motion control solutions since 1992. Pneumatic, electro-hydraulic & electrical actuators for critical automation applications worldwide. ✓ 32+ Years Experience ✓ Global Presence ✓ ISO 9001 Certified">
+        <meta name="keywords" content="industrial actuators, pneumatic actuators, scotch yoke actuators, gearboxes, electro-hydraulic actuators, electrical actuators, motion control, valve automation, automation solutions, rotary actuators, linear actuators, quarter turn actuators, multi-turn actuators, valve actuators, process automation">
         <meta name="author" content="Susin Group">
         <meta name="publisher" content="Susin Group">
+        <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+        <meta name="language" content="English">
+        <meta name="revisit-after" content="7 days">
+        <meta name="distribution" content="global">
+        <meta name="rating" content="general">
         <meta name="geo.region" content="IN-TN">
         <meta name="geo.placename" content="Coimbatore">
         <link rel="canonical" href="https://www.susingroup.com/index.html" />
@@ -40,8 +45,8 @@
 
         <!-- Open Graph / Twitter -->
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Industrial Actuators & Gearboxes | Advanced Motion Control Solutions">
-        <meta property="og:description" content="Leading manufacturer of industrial actuators, gearboxes & motion control solutions. ✓ 32+ Years Experience ✓ Global Presence">
+        <meta property="og:title" content="Industrial Actuators & Gearboxes | Advanced Motion Control Solutions | Susin Group">
+        <meta property="og:description" content="Leading manufacturer of industrial actuators, gearboxes & motion control solutions since 1992. ✓ 32+ Years Experience ✓ ISO 9001 Certified ✓ Global Presence in India, UAE & Qatar">
         <meta property="og:url" content="https://www.susingroup.com/">
         <meta property="og:image" content="https://www.susingroup.com/assets/img/og-image.jpg">
         <meta property="og:image:alt" content="Susin Group Industrial Actuators and Gearboxes">
