--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -17,8 +17,11 @@
     <meta name="twitter:site" content="@susingroup">
     <meta name="twitter:creator" content="@susingroup">
     <title>Products — Pneumatic, Gearboxes, Electro-Hydraulic & Electrical Actuators</title>
-    <meta name="description" content="Product portfolio: Pneumatic Scotch Yoke actuators, mechanical gearboxes, electro-hydraulic and electrical actuators for industrial automation.">
-    <meta name="keywords" content="pneumatic actuators, gearboxes, electro-hydraulic actuators, electrical actuators, rotary actuators, industrial automation">
+    <meta name="description" content="Product portfolio: Pneumatic Scotch Yoke actuators, mechanical gearboxes, electro-hydraulic and electrical actuators for industrial automation. ✓ Spring Return & Double Acting ✓ Custom Solutions ✓ 32+ Years Experience">
+    <meta name="keywords" content="pneumatic actuators, scotch yoke actuators, spring return actuators, double acting actuators, mechanical gearboxes, worm gearboxes, bevel gearboxes, electro-hydraulic actuators, electrical actuators, rotary actuators, quarter turn actuators, multi-turn actuators, linear actuators, fail-safe actuators, industrial automation, valve actuators">
+    <meta name="author" content="Susin Group">
+    <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+    <meta name="language" content="English">
     <link rel="canonical" href="https://www.susingroup.com/products-actuators-gearboxes.html" />
     <link rel="icon" href="logo.jpg">
 
