--- a/resources.html
+++ b/resources.html
@@ -14,9 +14,11 @@
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
         <title>Technical Resources & Downloads | Actuator Datasheets, Manuals | Susin Group</title>
-        <meta name="description" content="Free technical resources: actuator datasheets, installation manuals, sizing programs & CAD drawings. ✓ Instant Downloads ✓ Technical Support ✓ Product Selection Tools">
-        <meta name="keywords" content="actuator datasheets, technical documentation, installation manuals, sizing programs, CAD drawings, product selection, FAQs, technical resources, downloads">
+        <meta name="description" content="Free technical resources: actuator datasheets, installation manuals, operation & maintenance guides, sizing programs, CAD drawings & technical specifications. ✓ Instant Downloads ✓ Technical Support ✓ Product Selection Tools ✓ 2D/3D CAD Files">
+        <meta name="keywords" content="actuator datasheets, technical documentation, installation manuals, sizing programs, CAD drawings, product selection, FAQs, technical resources, downloads, operation manuals, maintenance guides, 2D drawings, 3D models, torque calculations, product catalogs, spec sheets">
         <meta name="author" content="Susin Group">
+        <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+        <meta name="language" content="English">
         <link rel="canonical" href="https://www.susingroup.com/resources.html" />
         <link rel="icon" href="logo.jpg">
 
