--- a/services.html
+++ b/services.html
@@ -14,9 +14,11 @@
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
         <title>Industrial Actuator Services | Installation, Maintenance & Support | Susin Group</title>
-        <meta name="description" content="Comprehensive actuator services: installation, commissioning, maintenance, training & custom solutions. ✓ Expert Support ✓ Global Service Network ✓ 24/7 Technical Assistance">
-        <meta name="keywords" content="actuator installation, commissioning services, maintenance support, training programs, customization services, spare parts, technical support, repair services, field service">
+        <meta name="description" content="Comprehensive actuator services: installation, commissioning, preventive maintenance, emergency repairs, training & custom solutions. ✓ Expert Support ✓ Global Service Network ✓ 24/7 Technical Assistance ✓ Genuine Spare Parts ✓ On-site Services">
+        <meta name="keywords" content="actuator services, actuator installation, valve automation commissioning, actuator maintenance, preventive maintenance, emergency repair, actuator training, technical support, custom actuator solutions, spare parts, retrofitting, actuator upgrades, field service, on-site support, actuator troubleshooting">
         <meta name="author" content="Susin Group">
+        <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+        <meta name="language" content="English">
         <link rel="canonical" href="https://www.susingroup.com/services.html" />
         <link rel="icon" href="logo.jpg">
 
