--- a/industries-served.html
+++ b/industries-served.html
@@ -14,8 +14,11 @@
     <meta name="twitter:site" content="@susingroup">
     <meta name="twitter:creator" content="@susingroup">
     <title>Industries Served — Oil & Gas, Water, Power & More</title>
-    <meta name="description" content="Industries served by Susin Group: Oil & Gas, Water Treatment, Power Generation, Chemical, Marine, Pharmaceutical, and more.">
-    <meta name="keywords" content="industries, oil and gas, water treatment, power generation, chemical processing, marine, pharmaceutical, industrial solutions">
+    <meta name="description" content="Industries served by Susin Group: Oil & Gas, Water Treatment, Power Generation, Chemical, Marine & Offshore, Pharmaceutical, Mining, Food & Beverage. ✓ 32+ Years Experience ✓ Industry-Specific Solutions ✓ Global Projects">
+    <meta name="keywords" content="industries, oil and gas, water treatment, power generation, chemical processing, marine, pharmaceutical, industrial solutions, upstream oil gas, downstream refining, offshore actuators, mining actuators, food processing, process automation">
+    <meta name="author" content="Susin Group">
+    <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+    <meta name="language" content="English">
     <link rel="canonical" href="https://www.susingroup.com/industries-served.html" />
     <link rel="icon" href="logo.jpg">
 
