--- a/industries.html
+++ b/industries.html
@@ -14,9 +14,11 @@
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
         <title>Industries Served | Oil & Gas, Power, Chemical Actuator Solutions | Susin Group</title>
-        <meta name="description" content="Susin Group serves diverse industries: Oil & Gas, Power Generation, Water Treatment, Chemical Processing & more. ✓ Industry-Specific Solutions ✓ Proven Track Record ✓ Global Projects">
-        <meta name="keywords" content="oil and gas actuators, power generation, water treatment, chemical processing, marine offshore, pharmaceutical, mining, petrochemical, valve automation, industrial actuators">
+        <meta name="description" content="Susin Group serves diverse industries: Oil & Gas, Power Generation, Water Treatment, Chemical Processing, Marine & Offshore, Pharmaceutical. ✓ Industry-Specific Solutions ✓ Proven Track Record ✓ Global Projects ✓ 32+ Years Experience">
+        <meta name="keywords" content="oil and gas actuators, power generation, water treatment, chemical processing, marine offshore, pharmaceutical, mining, petrochemical, valve automation, industrial actuators, upstream oil gas, downstream refining, thermal power, nuclear power, wastewater treatment, offshore platform actuators, process automation">
         <meta name="author" content="Susin Group">
+        <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+        <meta name="language" content="English">
         <link rel="canonical" href="https://www.susingroup.com/industries.html" />
         <link rel="icon" href="logo.jpg">
 
