--- a/products.html
+++ b/products.html
@@ -14,9 +14,11 @@
         <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
         <meta name="robots" content="index, follow">
         <title>Industrial Actuators & Gearboxes Products | Pneumatic, Hydraulic & Electrical | Susin Group</title>
-        <meta name="description" content="Complete range of industrial actuators & gearboxes: Pneumatic Scotch Yoke, electro-hydraulic, electrical actuators for automation. ✓ Custom Solutions ✓ 32+ Years Experience ✓ Global Support">
-        <meta name="keywords" content="pneumatic actuators, scotch yoke actuators, gearboxes, electro-hydraulic actuators, electrical actuators, valve actuators, rotary actuators, linear actuators, industrial automation, motion control">
+        <meta name="description" content="Complete range of industrial actuators & gearboxes: Pneumatic Scotch Yoke, electro-hydraulic, electrical actuators for automation. Spring return & double acting models. ✓ Custom Solutions ✓ 32+ Years Experience ✓ Global Support ✓ ISO 9001 Certified">
+        <meta name="keywords" content="pneumatic actuators, scotch yoke actuators, spring return actuators, double acting actuators, mechanical gearboxes, worm gearboxes, bevel gearboxes, electro-hydraulic actuators, electrical actuators, valve actuators, quarter turn actuators, multi-turn actuators, rotary actuators, linear actuators, fail-safe actuators, explosion proof actuators, industrial automation, motion control">
         <meta name="author" content="Susin Group">
+        <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+        <meta name="language" content="English">
         <link rel="canonical" href="https://www.susingroup.com/products.html" />
         <link rel="icon" href="logo.jpg">
 
