--- a/resources-technical-docs.html
+++ b/resources-technical-docs.html
@@ -14,8 +14,11 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <title>Resources — Datasheets, Manuals & Sizing Tools</title>
-    <meta name="description" content="Datasheets, manuals, sizing programs, FAQs and technical resources for Susin Group products and solutions.">
-    <meta name="keywords" content="datasheets, manuals, technical documentation, sizing programs, CAD drawings, FAQs, product resources, downloads">
+    <meta name="description" content="Datasheets, installation & operation manuals, sizing programs, FAQs and technical resources for Susin Group products and solutions. ✓ Free Downloads ✓ CAD Files ✓ Technical Specifications ✓ Selection Tools">
+    <meta name="keywords" content="datasheets, manuals, technical documentation, sizing programs, CAD drawings, FAQs, product resources, downloads, operation manuals, installation guides, maintenance guides, 2D drawings, 3D models, torque calculations, spec sheets">
+    <meta name="author" content="Susin Group">
+    <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+    <meta name="language" content="English">
     <link rel="canonical" href="https://www.susingroup.com/resources-technical-docs.html" />
     <link rel="icon" href="logo.jpg">
 
