--- a/services-installation-maintenance.html
+++ b/services-installation-maintenance.html
@@ -14,8 +14,11 @@
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <title>Services — Installation, Maintenance & Support for Actuators</title>
-    <meta name="description" content="Services including installation, commissioning, maintenance, training, customization and spare parts for industrial actuators and gearboxes.">
-    <meta name="keywords" content="installation, commissioning, maintenance, technical support, training, customization, spare parts, repair services">
+    <meta name="description" content="Services including installation, commissioning, preventive maintenance, emergency repairs, training, customization and spare parts for industrial actuators and gearboxes. ✓ 24/7 Support ✓ Global Service Network ✓ Expert Technicians">
+    <meta name="keywords" content="installation, commissioning, maintenance, technical support, training, customization, spare parts, repair services, preventive maintenance, emergency repair, field service, on-site support, actuator troubleshooting, retrofitting, upgrades">
+    <meta name="author" content="Susin Group">
+    <meta name="copyright" content="© 2025 Susin Group. All rights reserved.">
+    <meta name="language" content="English">
     <link rel="canonical" href="https://www.susingroup.com/services-installation-maintenance.html" />
     <link rel="icon" href="logo.jpg">
 
