--- a/careers.html
+++ b/careers.html
@@ -205,6 +205,29 @@
                         </ul>
                     </li>
                     <li class="dropdown">
+                        <a href="#" aria-haspopup="true" aria-expanded="false">Global Presence</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
+                            <li class="has-panel">
+                                <a href="global-presence/susin-itork-india.html">India</a>
+                                <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
+                                    <img src="/assets/img/global-presence/thumb-placeholder.svg" alt="Susin I-Tork India" class="submenu-thumb">
+                                    <h4>Susin I-Tork India</h4>
+                                    <p>Susin I-Tork India specialises in providing reliable flow-control and valve automation solutions. Established in 2007 as a JV with I-TORK Controls (South Korea), the facility now manufactures pneumatic actuators in India and serves power, cement, sugar, chemical and energy sectors.</p>
+                                    <ul class="submenu-contacts">
+                                        <li><strong>Phone:</strong> <a href="tel:+917708097242">+91 77080 97242</a></li>
+                                        <li><strong>Email:</strong> <a href="mailto:techsales@susinitork.in">techsales@susinitork.in</a></li>
+                                        <li><strong>Location:</strong> Coimbatore, India</li>
+                                    </ul>
+                                    <p class="submenu-actions"><a class="btn btn-sm" href="global-presence/susin-itork-india.html">View full profile</a> <a class="btn btn-link" href="contact.html#locations">Contact local office</a></p>
+                                </div>
+                            </li>
+                            <li><a href="index.html#middle-east">Middle East</a></li>
+                            <li><a href="index.html#europe">Europe</a></li>
+                            <li><a href="index.html#far-east">Far East</a></li>
+                            <li><a href="index.html#recent-projects">Recent Projects</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
                         <a href="industries-served.html" aria-haspopup="true" aria-expanded="false">Industries</a>
                         <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="industries.html#oil-gas">Oil & Gas</a></li>
